# cpp_chat

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: mysql.env
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
include/cpp_chat/app/: chat_server_app.h
include/cpp_chat/chat/: chat_service.h
include/cpp_chat/core/: server_config.h  thread_pool.h
include/cpp_chat/logging/: logger.h
include/cpp_chat/network/: connection.h  packet_codec.h  tcp_server.h
include/cpp_chat/protocol/: message.h
include/cpp_chat/session/: session.h  session_manager.h
include/cpp_chat/storage/: group_member_store.h  group_store.h  message_store.h  mysql_connection_pool.h  user_store.h
scripts/: integration_test.py  load_test.py
sql/mysql/: create_user.sql  schema.sql
src/: main.cpp
src/app/: chat_server_app.cpp
src/chat/: chat_service.cpp
src/core/: server_config.cpp  thread_pool.cpp
src/logging/: logger.cpp
src/network/: packet_codec.cpp  tcp_server.cpp
src/protocol/: message.cpp
src/session/: session_manager.cpp
src/storage/: group_member_store.cpp  group_store.cpp  message_store.cpp  mysql_connection_pool.cpp  user_store.cpp
tests/: test_chat_service.cpp  test_group_member_store.cpp  test_group_store.cpp  test_message_store.cpp  test_mysql_connection_pool.cpp  test_packet_codec.cpp  test_protocol.cpp  test_server_config.cpp  test_session.cpp  test_thread_pool.cpp  test_user_store.cpp
